tests/neg/i7746.scala
class A {
    def foo = (x : Int, y => x) => () // error // error
}